--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Cocktails",
-    "slug": "Cocktails",
+    "name": "Pooptails",
+    "slug": "Pooptails",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,9 +20,10 @@
       "supportsTablet": true
     },
     "android": {
+      "softwareKeyboardLayoutMode": "pan",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#99423d"
+        "backgroundColor": "#3d9970"
       },
       "package": "com.melcolmant.Cocktails"
     },
